src/test/ui/by-move-pattern-binding.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/by-move-pattern-binding.rs:24:11
   |
LL |     match &s.x {
   |           ^^^^ cannot move out of borrowed content
LL |         &E::Foo => {}
LL |         &E::Bar(identifier) => f(identifier.clone())  //~ ERROR cannot move
   |                 ----------
   |                 |
   |                 data moved here
   |                 help: to prevent move, use ref or ref mut: `ref identifier`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
